# PlaFactor

./: .gitignore  CMakeLists.txt  README.md  gpuutil.cu  gpuutil.h  main.cu  miscfunctions.cu  miscfunctions.h  oneDArray.cu  pla.cu  pla.h
testcases/: espresso_minimized.pla  espresso_minimizedtest.pla  espresso_small3test.pla
